# musical-scales

./: .readthedocs.yaml  README.md  build_docs.sh  license  setup.cfg  setup.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  modules.rst  musical_scales.rst
src/musical_scales/: __init__.py
tests/: test_note.py  test_scale.py
