[metadata]
name = musical-scales
version = 0.1.2
author = Hector Miller-Bakewell
author_email = hmillerbakewell@gmail.com
description = Retrieve a scale based on a given mode and starting note.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hmillerbakewell/musical-scales
project_urls =
    Bug Tracker = https://github.com/hmillerbakewell/musical-scales
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src